[package]
name = "tick"
version = "0.2.0"
authors = ["Roger Steve Ruiz <hi@rog.gr"]
description = "A time-tracking cli tool that starts, stops, lists, deletes, and checks timers."
repository = "https://github.com/rogeruiz/tick"
readme = "README.md"
keywords = [
  "cli",
  "timekeeping",
  "time-tracking"
]
license = "MIT"

[dependencies]
dotenv = "0.10"
chrono = "0.3"

[dependencies.clap]
version = "2.24"
features = [
  "suggestions",
  "color",
  "wrap_help",
  "yaml",
]

[dependencies.diesel]
version = "0.13"
features = [ "sqlite" ]

[dependencies.diesel_codegen]
version = "0.13"
features = [ "sqlite" ]
