[package]
name = "tick"
version = "1.0.0"
authors = ["Roger Steve Ruiz <hi@rog.gr"]
description = "A time-tracking cli tool that starts, stops, lists, deletes, and checks timers."
repository = "https://github.com/rogeruiz/tick"
readme = "README.md"
keywords = [
  "cli",
  "timekeeping",
  "time-tracking"
]
license = "MIT"

[dependencies]
tock = { path = "./lib/tock" }

[dependencies.clap]
version = "2.33.3"
features = [
  "suggestions",
  "color",
  "wrap_help",
  "yaml",
]
